--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			    <a href="https://daonlydominic.github.io/DominicWebsite/cats.html" class="center text-fix">Cat Pictures</a>
+			    <a href="https://daonlydominic.github.io/DominicWebsite/DominicChat.html" class="center text-fix">Chat</a>
 			</body>
 </html>
