--- a/DominicChat.html
+++ b/DominicChat.html
@@ -7,6 +7,7 @@
       .title {
         font-family: "Arial Black";
         color: white;
+        align: center;
       }
       body {
         background-color: black;
