--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 	</head>
 			<body>
 			    <p class="imagetext center">Welcome to my website</p>
-			    <a href="https://daonlydominic.github.io/DominicWebsite/DominicChat.html" class="center text-fix">Chat</a>
+			    <a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html" class="center text-fix">Chat</a>
+			    <a href="https://daonlydominic.github.io.DominicWebsite/espressobusiness.html" class="center text-fix">Espresso Business</a>
+			    <a href="https://daonlydominic.github.io/DominicWebsite/pictures.html" class="center text-fix"></a>
 			</body>
 </html>
