Update and rename DomsShop.html to domsshop.html

--- a/domsshop.html
+++ b/domsshop.html
@@ -8,7 +8,7 @@
 	<script>
 	</script>
 	<head>
-		<h1>Hello! This is Dominic's Pokémon shop.</h1>
+		<h1 style="font-family: Arial; text-align: center;">Hello! This is Dominic's shop.</h1>
 	</head>
 	<body>
 		<iframe src = "https://docs.google.com/forms/d/e/1FAIpQLSd7C3UuNksAY-6WSlQqSgMRV5mPoBO74qvDYLlqUxLdLA2qrg/viewform?c=0&w=1">
