--- a/index.html
+++ b/index.html
@@ -33,5 +33,11 @@
 			    <a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html" class="center text-fix">Chat</a>
 			    <a href="https://daonlydominic.github.io.DominicWebsite/espressobusiness.html" class="center text-fix">Espresso Business</a>
 			    <a href="https://daonlydominic.github.io/DominicWebsite/pictures.html" class="center text-fix"></a>
+			    <ul>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+				    <li><a href="https://daonlydominic.github.io.DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+			    </ul>
 			</body>
 </html>
