--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 				text-decoration: none;
 				color: #00bfff;
 			}
+			ul {
+    				list-style-type: none;
+    				margin: 0;
+    				padding: 0;
+			}
 		</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
