--- a/index.html
+++ b/index.html
@@ -26,9 +26,24 @@
 				color: #00bfff;
 			}
 			ul {
-    				list-style-type: none;
-    				margin: 0;
-    				padding: 0;
+			    list-style-type: none;
+			    margin: 0;
+			    padding: 0;
+			    width: 200px;
+			    background-color: #07004c;
+			}
+
+			li a {
+			    display: block;
+			    color: #07004c;
+			    padding: 8px 16px;
+			    text-decoration: none;
+			}
+
+			/* Change the link color on hover */
+			li a:hover {
+			    background-color: #555;
+			    color: white;
 			}
 		</style>
 				<title>Welcome! | Dominic's Website</title>
