--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
 			    margin: 0;
 			    padding: 0;
 			    width: 200px;
-			    background-color: #07004c;
+			    background-color: #303030;
 			}
 
 			li a {
 			    display: block;
-			    color: #07004c;
+			    color: #303030;
 			    padding: 8px 16px;
 			    text-decoration: none;
 			}
-
-			/* Change the link color on hover */
 			li a:hover {
 			    background-color: #555;
 			    color: white;
@@ -49,6 +47,7 @@
 				<title>Welcome! | Dominic's Website</title>
 	</head>
 			<body>
+				<h1 class="center imagetext">Welcome to my Website!</h1>
 			    <ul>
 				    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
 				    <li><a href="https://daonlydominic.github.io.DominicWebsite/espressobusiness.html">Espresso Business</a></li>
