--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 				color: rgb(255, 255, 255);
 			}
 			a {
-				text-decoration: none;
-				color: #00bfff;
+				text-decoration: none !important;
+				color: #00bfff !important;
 			}
 			ul {
 			    list-style-type: none;
@@ -35,7 +35,7 @@
 
 			li a {
 			    display: block;
-			    color: #303030;
+			    color: #00bfff;
 			    padding: 8px 16px;
 			    text-decoration: none;
 			}
