--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 			    color: #00bfff;
 			    padding: 8px 16px;
 			    text-decoration: none;
+			    font-family: "Century Gothic";
 			}
 			li a:hover {
 			    background-color: #555;
