--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 			    padding: 8px 16px;
 			    text-decoration: none;
 			    font-family: "Century Gothic";
+			    font-weight: bold;
 			}
 			li a:hover {
-			    background-color: #555;
+			    background-color: #00bfff;
 			    color: white;
 			}
 		</style>
