--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<h1 class="center imagetext">Welcome to my Website!</h1>
 			    <ul>
 				    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-				    <li><a href="https://daonlydominic.github.io.DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
 				    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
 				    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
 			    </ul>
