--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			}
 			li a:hover {
 			    background-color: #00bfff;
-			    color: white;
+			    color: #ffffff;
 			}
 		</style>
 				<title>Welcome! | Dominic's Website</title>
