--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 			}
 			li a:hover {
 			    background-color: #00bfff;
-			    color: #ffffff;
 			}
+      			a:hover {
+        			color: #ffffff !important;
+      			}
 		</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
