--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -13,11 +13,38 @@
     font-family: "Century Gothic";
     color: #00bfff;
   }
+  ul {
+          list-style-type: none;
+			    margin: 0;
+			    padding: 0;
+			    width: 200px;
+			    background-color: #303030;
+			}
+			li a {
+			    display: block;
+			    color: #00bfff;
+			    padding: 8px 16px;
+			    text-decoration: none;
+			    font-family: "Century Gothic";
+			    font-weight: bold;
+			}
+			li a:hover {
+			    background-color: #00bfff;
+			}
+      			a:hover {
+        			color: #ffffff !important;
+      			}
 </style>
 <head>
   <title>Dominic's Website | Espresso Business</title>
 </head>
 <body>
   <h1 class="center font1">Dominic's Espresso Business</h1>
+  <ul>
+    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+    <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+  </ul>
   <p style="color: white;">Nuttin here yet!</p>
 </body>
