--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
 				    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
 				    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
 			    </ul>
+			    <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
 			</body>
 </html>
