--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -46,5 +46,6 @@
     <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
     <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
   </ul>
-  <p style="color: white;">Nuttin here yet!</p>
+	<p style="color: white;">Nuttin here yet!</p>
+	<p style="color: white;">Still starting up business. I have the supplies, but I still need a vendor's licence and a food handler's licence. A vendor's licence is $400/year and a food handler's licence is not very expensive. I am accepting donations.</p>
 </body>
