--- a/dominicchat.html
+++ b/dominicchat.html
@@ -5,17 +5,44 @@
     </script>
     <style>
       .title {
-        font-family: "Arial Black";
-        color: white;
+        font-family: "Century Gothic";
+        color: #00bfff;
         align: center;
       }
       body {
         background-color: black;
       }
+      ul {
+          list-style-type: none;
+			    margin: 0;
+			    padding: 0;
+			    width: 200px;
+			    background-color: #303030;
+			}
+			li a {
+			    display: block;
+			    color: #00bfff;
+			    padding: 8px 16px;
+			    text-decoration: none;
+			    font-family: "Century Gothic";
+			    font-weight: bold;
+			}
+			li a:hover {
+			    background-color: #00bfff;
+			}
+      			a:hover {
+        			color: #ffffff !important;
+      			}
     </style>
   </head>
   <body>
     <h1 class="title">Dominic's Chat</h1>
+    <ul>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+				    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+</ul>
     <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
   </body>
 </html>
