--- a/dominicchat.html
+++ b/dominicchat.html
@@ -34,6 +34,7 @@
         			color: #ffffff !important;
       			}
     </style>
+   <title>Dominic's Website | Dominic's Chat</title>
   </head>
   <body>
     <h1 class="title">Dominic's Chat</h1>
