--- a/dominicchat.html
+++ b/dominicchat.html
@@ -7,7 +7,7 @@
       .title {
         font-family: "Century Gothic";
         color: #00bfff;
-        align: center;
+        text-align: center;
       }
       body {
         background-color: black;
