--- a/dominicchat.html
+++ b/dominicchat.html
@@ -4,7 +4,37 @@
     <script>
     </script>
     <style>
-     <link rel="stylesheet" type="text/css" href="/universalstyle.css">
+     body {
+    background-color: black;
+  }
+.center {
+  text-align: center;
+}
+.font1 {
+  font-family: "Century Gothic";
+  color: #00bfff;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 200px;
+  background-color: #303030;
+}
+li a {
+    display: block;
+    color: #00bfff;
+    padding: 8px 16px;
+    text-decoration: none;
+    font-family: "Century Gothic";
+    font-weight: bold;
+}
+li a:hover {
+    background-color: #00bfff;
+}
+a:hover {
+  color: #ffffff !important;
+}
     </style>
    <title>Dominic's Website | Dominic's Chat</title>
   </head>
