--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       			a:hover {
         			color: #ffffff !important;
       			}
+			<link rel="icon" href="http://daonlydominic.github.io/DominicWebsite/avatar.png">
 		</style>
 				<title>Welcome! | Dominic's Website</title>
 	</head>
