--- a/index.html
+++ b/index.html
@@ -1,64 +1,63 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<script src="daonlydominic.github.io/DominicWebsite/script.js">
-		</script>
-		<link rel>
-		<style>
-			.imagetext {
-				  font-family: impact;
-				  font-size: 100px;
-				  color: rgb(255, 255, 255);
-				  text-transform: uppercase;
-				  background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
-				}
-			.center {
-			  text-align: center;
-			}
-			body {
-				background-color: black;
-			}
-			.text-fix {
-				color: rgb(255, 255, 255);
-			}
-			a {
-				text-decoration: none !important;
-				color: #00bfff !important;
-			}
-			ul {
-			    list-style-type: none;
-			    margin: 0;
-			    padding: 0;
-			    width: 200px;
-			    background-color: #303030;
-			}
-
-			li a {
-			    display: block;
-			    color: #00bfff;
-			    padding: 8px 16px;
-			    text-decoration: none;
-			    font-family: "Century Gothic";
-			    font-weight: bold;
-			}
-			li a:hover {
-			    background-color: #00bfff;
-			}
-      			a:hover {
-        			color: #ffffff !important;
-      			}
-			<link rel="icon" href="http://daonlydominic.github.io/DominicWebsite/avatar.png">
-		</style>
-				<title>Welcome! | Dominic's Website</title>
-	</head>
-			<body>
-				<h1 class="center imagetext">Welcome to my Website!</h1>
-			    <ul>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-			    </ul>
-			    <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
-			</body>
+    <head>
+        <script src="daonlydominic.github.io/DominicWebsite/script.js"></script>
+        <link rel="icon" type="image/png" href="https://daonlydominic.github.io/DominicWebsite/avatar_8PF_icon.ico">
+        <style>
+            .imagetext {
+            font-family: impact;
+            font-size: 100px;
+            color: rgb(255, 255, 255);
+            text-transform: uppercase;
+            background-image: url("https://daonlydominic.github.io/DominicWebsite/ForeverGif.gif");
+            }
+            .center {
+            text-align: center;
+            }
+            body {
+            background-color: black;
+            }
+            .text-fix {
+            color: rgb(255, 255, 255);
+            }
+            a {
+            text-decoration: none !important;
+            color: #00bfff !important;
+            }
+            ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 200px;
+            background-color: #303030;
+            }
+            li a {
+            display: block;
+            color: #00bfff;
+            padding: 8px 16px;
+            text-decoration: none;
+            font-family: "Century Gothic";
+            font-weight: bold;
+            }
+            li a:hover {
+            background-color: #00bfff;
+            }
+            a:hover {
+            color: #ffffff !important;
+            }
+            <link rel="icon" href="http://daonlydominic.github.io/DominicWebsite/avatar.png">
+        </style>
+        <title>Welcome! | Dominic's Website</title>
+    </head>
+    <body>
+        <h1 class="center imagetext">Welcome to my Website!</h1>
+        <ul>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+            <li><a href="https://daonlydominic.github.io/dominicshop.html">My shop</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+        </ul>
+        <p class="text-fix center">This website is still under construction. Check for updates frequently!</p>
+    </body>
 </html>
