--- a/dominicchat.html
+++ b/dominicchat.html
@@ -1,51 +1,53 @@
+
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <script>
-    </script>
-    <style>
-     body {
-    background-color: black;
-  }
-.center {
-  text-align: center;
-}
-.font1 {
-  font-family: "Century Gothic";
-  color: #00bfff;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #303030;
-}
-li a {
-    display: block;
-    color: #00bfff;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-family: "Century Gothic";
-    font-weight: bold;
-}
-li a:hover {
-    background-color: #00bfff;
-}
-a:hover {
-  color: #ffffff !important;
-}
-    </style>
-   <title>Dominic's Website | Dominic's Chat</title>
-  </head>
-  <body>
-    <h1 class="title">Dominic's Chat</h1>
-    <ul>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
-				    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-</ul>
-    <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
-  </body>
+    <head>
+        <script></script>
+        <style>
+            body {
+            background-color: black;
+            }
+            .center {
+            text-align: center;
+            }
+            .font1 {
+            font-family: "Century Gothic";
+            color: #00bfff;
+            }
+            ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            width: 200px;
+            background-color: #303030;
+            }
+            li a {
+            display: block;
+            color: #00bfff;
+            padding: 8px 16px;
+            text-decoration: none;
+            font-family: "Century Gothic";
+            font-weight: bold;
+            }
+            li a:hover {
+            background-color: #00bfff;
+            }
+            a:hover {
+            color: #ffffff !important;
+            }
+        </style>
+        <title>Dominic's Website | Dominic's Chat</title>
+    </head>
+    <body>
+        <h1 class="title">Dominic's Chat</h1>
+        <ul>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+            <li><a href="https://daonlydominic.github.io/dominicshop.html">My shop</a></li>
+            <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+        </ul>
+        <iframe src='https://minnit.chat/DominicsWebsiteChat?embed&' width='1024' height='768' align='center' style='border:none;' allowTransparency='true'></iframe><br>
+    </body>
 </html>
