--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -44,6 +44,7 @@ a:hover {
     <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
     <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
     <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+    <li><a href="https://daonlydominic.github.io/dominicshop.html">My shop</a></li>
     <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
   </ul>
 	<p style="color: white;">Nuttin here yet!</p>
