--- a/espressobusiness.html
+++ b/espressobusiness.html
@@ -1,52 +1,50 @@
 <!DOCTYPE html>
-<script>
-        
-</script>
+<script></script>
 <style>
-	body {
+    body {
     background-color: black;
-  }
-.center {
-  text-align: center;
-}
-.font1 {
-  font-family: "Century Gothic";
-  color: #00bfff;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  width: 200px;
-  background-color: #303030;
-}
-li a {
+    }
+    .center {
+    text-align: center;
+    }
+    .font1 {
+    font-family: "Century Gothic";
+    color: #00bfff;
+    }
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #303030;
+    }
+    li a {
     display: block;
     color: #00bfff;
     padding: 8px 16px;
     text-decoration: none;
     font-family: "Century Gothic";
     font-weight: bold;
-}
-li a:hover {
+    }
+    li a:hover {
     background-color: #00bfff;
-}
-a:hover {
-  color: #ffffff !important;
-}
+    }
+    a:hover {
+    color: #ffffff !important;
+    }
 </style>
 <head>
-  <title>Dominic's Website | Espresso Business</title>
+    <title>Dominic's Website | Espresso Business</title>
 </head>
 <body>
-  <h1 class="center font1">Dominic's Espresso Business</h1>
-  <ul>
-    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-    <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-    <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
-    <li><a href="https://daonlydominic.github.io/dominicshop.html">My shop</a></li>
-    <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-  </ul>
-	<p style="color: white;">Nuttin here yet!</p>
-	<p style="color: white;">Still starting up business. I have the supplies, but I still need a vendor's licence and a food handler's licence. A vendor's licence is $400/year and a food handler's licence is not very expensive. I am accepting donations.</p>
+    <h1 class="center font1">Dominic's Espresso Business</h1>
+    <ul>
+        <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+        <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+        <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+        <li><a href="https://daonlydominic.github.io/dominicshop.html">My shop</a></li>
+        <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
+    </ul>
+    <p style="color: white;">Nuttin here yet!</p>
+    <p style="color: white;">Still starting up business. I have the supplies, but I still need a vendor's licence and a food handler's licence. A vendor's licence is $400/year and a food handler's licence is not very expensive. I am accepting donations.</p>
 </body>
