--- a/dominicshop.html
+++ b/dominicshop.html
@@ -42,6 +42,7 @@
             <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+	    <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
         </ul>
 	<p>Nothing here yet. Go on my chat and send a message saying what <i>Yu-Gi-Oh!</i> cards you need</p>
