--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <ul>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-            <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+            /*<li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>*/
             <li><a href="https://daonlydominic.github.io/dominicshop.html">My shop</a></li>
             <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
         </ul>
