--- a/recipes.html
+++ b/recipes.html
@@ -1,79 +1,89 @@
 <!DOCTYPE html>
-<script></script>
-<style>
-    body {
-    background-color: black;
-    }
-    .center {
-    text-align: center;
-    }
-    .font1 {
-    font-family: "Century Gothic";
-    color: #00bfff;
-    }
-    ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 200px;
-    background-color: #303030;
-    }
-    li a {
-    display: block;
-    color: #00bfff;
-    padding: 8px 16px;
-    text-decoration: none;
-    font-family: "Century Gothic";
-    font-weight: bold;
-    }
-    li a:hover {
-    background-color: #00bfff;
-    }
-    a:hover {
-    color: #ffffff !important;
-    }
-    .white {
-    color: #ffffff !important;
-    }
-</style>
-<head>
-    <title>Dominic's Website | Espresso Business</title>
-</head>
-<body>
-    <h1 class="center font1">Dominic's Recipes</h1>
-    <ul>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
-        <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
-    </ul>
-    <h2 style="color: white; align: center;"></h2>
-    <p class="white">Banana Bread:</p>
-    <div class="ingredients">
-      <h3 class="white">Ingredients:</h3>
-      <ul style="list-style-type: square;">
-        <li>1/2 Cup Butter (I use unsalted)</li>
-        <li>1 Cup Sugar</li>
-        <li>2 Beaten Eggs</li>
-        <li>4 Finely Crushed Bananas (The browner the better)</li>
-        <li>1 1/2 Cups Flour</li>
-        <li>1 Teaspoon Baking Soda</li>
-        <li>1/2 Teaspoon Salt</li>
-        <li>1/2 Teaspoon Vanilla</li>
+<html>
+   <script></script>
+   <style>
+      body {
+      background-color: black;
+      }
+      .center {
+      text-align: center;
+      }
+      .font1 {
+      font-family: "Century Gothic";
+      color: #00bfff;
+      }
+      ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      width: 200px;
+      background-color: #303030;
+      }
+      li a {
+      display: block;
+      color: #00bfff;
+      padding: 8px 16px;
+      text-decoration: none;
+      font-family: "Century Gothic";
+      font-weight: bold;
+      }
+      li a:hover {
+      background-color: #00bfff;
+      }
+      a:hover {
+      color: #ffffff !important;
+      }
+      .white {
+      color: #ffffff !important;
+      }
+      .font2 {
+      font-family: "Century Gothic";
+      color: #ffffff !important;
+      }
+      h3 {
+      color: orange !important;
+      }
+   </style>
+   <head>
+      <title>Dominic's Website | Espresso Business</title>
+   </head>
+   <body>
+      <h1 class="center font1">Dominic's Recipes</h1>
+      <ul>
+         <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicchat.html">Chat</a></li>
+         <li><a href="https://daonlydominic.github.io/DominicWebsite/espressobusiness.html">Espresso Business</a></li>
+         <li><a href="https://daonlydominic.github.io/DominicWebsite/pictures.html">Pictures</a></li>
+         <li><a href="https://daonlydominic.github.io/DominicWebsite/dominicshop.html">My Shop</a></li>
+         <li><a href="https://daonlydominic.github.io/DominicWebsite">Home</a></li>
       </ul>
-    </div>
-    <div class="directions">
-      <h4>Directions</h4>
-      <ol class="expanded">
-        <li>Preheat oven to 350º / 180º.</li>
-        <li>Cream together butter and sugar.</li>
-        <li>Add eggs and crushed bananas.</li>
-        <li>Combine well.</li>
-        <li>Sift together flour, soda and salt. Add to creamed mixture. Add vanilla.</li>
-        <li>Mix just until combined. Do not overmix.</li>
-        <li>Pour into greased and floured loaf pan.</li>
-        <li>Bake at 350º / 180º for 55 minutes.</li>
-      </ol>
-     </div>
-</body>
+      <div id="bananabread">
+         <p class="white font1">For Banana Bread:</p>
+         <div class="ingredients">
+            <h3 class="white font1" style="color: orange !important;">Ingredients:</h3>
+            <ul class="font2" style="background-color: #000000 !important; width: 400px;">
+               <li>-1/2 Cup Butter (I use unsalted)</li>
+               <li>-1 Cup Sugar</li>
+               <li>-2 Beaten Eggs</li>
+               <li>-4 Finely Crushed Bananas (The browner the better)</li>
+               <li>-1 1/2 Cups Flour</li>
+               <li>-1 Teaspoon Baking Soda</li>
+               <li>-1/2 Teaspoon Salt</li>
+               <li>-1/2 Teaspoon Vanilla</li>
+            </ul>
+         </div>
+         <div class="directions">
+            <h3 class="font2" style="color: orange !important;">Directions</h3>
+            <ul class="expanded font2" style="background-color: #000000 !important; width: 400px">
+               <li>1. Preheat oven to 350º / 180º.</li>
+               <li>2. Cream together butter and sugar.</li>
+               <li>3. Add eggs and crushed bananas.</li>
+               <li>4. Combine well.</li>
+               <li>5. Sift together flour, soda and salt. Add to creamed mixture. Add vanilla.</li>
+               <li>6. Mix just until combined. Do not overmix.</li>
+               <li>7. Pour into greased and floured loaf pan.</li>
+               <li>8. Bake at 350º / 180º for 55 minutes.</li>
+            </ul>
+         </div>
+      </div>
+   </body>
+</html>
