--- a/recipes.html
+++ b/recipes.html
@@ -44,6 +44,15 @@
       h3 {
       color: orange !important;
       }
+      .directions, .ingredients {
+      float: left;
+      border-left: 5px solid #00bfff !important;
+      border: 1px solid #ffffff;
+      padding-left: 20px;
+      }
+      .ingredients {
+      border-right: none;
+      }
     </style>
     <title>Dominic's Website | Espresso Business</title>
   </head>
@@ -60,11 +69,11 @@
       <p class="white font1">For Banana Bread:</p>
       <div class="ingredients">
         <h3 class="white font1" style="color: orange !important;">Ingredients:</h3>
-        <ul class="font2" style="background-color: #000000 !important; width: 400px;">
+        <ul class="font2" style="background-color: #000000 !important; width: 250px;">
           <li>-1/2 Cup Butter (I use unsalted)</li>
           <li>-1 Cup Sugar</li>
           <li>-2 Beaten Eggs</li>
-          <li>-4 Finely Crushed Bananas (The browner the better)</li>
+          <li>-4 Finely Crushed Bananas</li>
           <li>-1 1/2 Cups Flour</li>
           <li>-1 Teaspoon Baking Soda</li>
           <li>-1/2 Teaspoon Salt</li>
@@ -73,7 +82,7 @@
       </div>
       <div class="directions">
         <h3 class="font2" style="color: orange !important;">Directions</h3>
-        <ul class="expanded font2" style="background-color: #000000 !important; width: 400px">
+        <ul class="expanded font2" style="background-color: #000000 !important; width: 250px">
           <li>1. Preheat oven to 350º / 180º.</li>
           <li>2. Cream together butter and sugar.</li>
           <li>3. Add eggs and crushed bananas.</li>
